# lint-emit

./: .travis.yml  Cargo.toml  LICENSE.md  README.md  appveyor.yml
ci/: before_deploy.ps1  before_deploy.sh  script.sh
src/: cli.yml  config.rs  default_config.yml  display.rs  lib.rs  lint.rs  linters.yml  logger.rs  main.rs
