[package]
name = "lint-emit"
version = "0.3.3"
license = "MIT"
description = "Lint your git diffs!"
authors = ["Alex Ragone <alex.ragone@ezyvet.com>"]
edition = "2018"
repository="https://github.com/ragone/lint-emit"
maintenance = { status = "passively-maintained" }
readme = "README.md"
keywords = ["linter", "diff", "lint", "git", "staged"]
categories = ["command-line-utilities"]

[badges]
travis-ci = { repository = "ragone/lint-emit", branch = "master" }

[dependencies]
clap = "2"
regex = "1"
slog = {version = "2", features = ["max_level_trace", "release_max_level_warn"]}
slog-term = "2"
slog-async = "2"
itertools = "0.8.0"
colored = "1.7.0"
walkdir = "2.2.7"
failure = "0.1.5"
indicatif = "0.11.0"
rayon = "1.0.3"
serde = { version = "1.0.87", features = ["derive"] }
dialoguer = "0.3.0"
toml = "0.4.10"
directories = "1.0.2"
